# ownPush

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml  build_unix.sh  data.md  readme.md
certificates/: createCertificates.cmd  createCertificates.sh  root.csr.cnf  server.csr.cnf  v3.ext
clients/android/: settings.gradle
clients/android/app/: build.gradle
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/net/damaex/OwnPush/: Client.java  ConnectionObject.java  CustomSSLSocketFactory.java  OwnPush.java  OwnPushRunChecker.java  OwnPushRunner.java  TcpClient.java
clients/android/app/src/main/java/net/damaex/ownpushtest/: Client.java  ConnectionObject.java  MainActivity.java  OwnPushTestApplication.java  PushHandler.java  ServiceStarter.java  TcpClient.java
clients/android/app/src/main/res/layout/: activity_main.xml
clients/android/app/src/main/res/values/: strings.xml
clients/android/gradle/wrapper/: gradle-wrapper.properties
clients/android/ownpush/: build.gradle
clients/android/ownpush/src/main/: AndroidManifest.xml
clients/android/ownpush/src/main/java/net/damaex/ownpush/: BroadcastType.java  Client.java  ConnectionObject.java  CustomSSLSocketFactory.java  IPushHandler.java  OwnPush.java  OwnPushApplication.java  OwnPushRunChecker.java  OwnPushRunner.java  PushReceiver.java  TcpClient.java
clients/android/ownpush/src/main/res/values/: strings.xml
clients/c#/: Program.cs  frmMain.Designer.cs  frmMain.cs  ownPushClient.cs  ownPushClient.csproj  ownPushClient.sln
clients/c#/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
clients/c#/ownPush/: Client.cs  ConnectionObject.cs  Handler.cs
clients/ios/: readme.md
clients/testClient/: CMakeLists.txt  Client.cpp  Client.h  ConsoleLog.h  main.cpp
cmake/: FindVLD.cmake
server/: CMakeLists.txt  ChallengeHandler.cpp  ChallengeHandler.h  Client.cpp  Client.h  ConnectionObject.cpp  ConnectionObject.h  Handler.h  IClient.h  IHandler.h  ILog.h  IUserProvider.h  Log.h  PushServer.cpp  PushServer.h  RestServer.cpp  RestServer.h  Settings.cpp  Settings.h  TestUserProvider.cpp  TestUserProvider.h  main.cpp  readme.md
server/exceptions/: ChallengeIncorrectException.h  ClientIDAlreadySetException.h  UnknownCommandException.h
